test/tests/stages/18_structures/invalid_struct_tags/for_loop_scope.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[41]:
  int
  identifier(main)
  (
  void
  )
  {
  for
  (
  int
  identifier(i)
  =
  const int(0)
  ;
  identifier(i)
  <
  const int(10)
  ;
  identifier(i)
  =
  identifier(i)
  +
  const int(1)
  )
  {
  struct
  identifier(s)
  {
  int
  identifier(a)
  ;
  }
  ;
  }
  struct
  identifier(s)
  identifier(x)
  ;
  return
  const int(0)
  ;
  }
